<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.gif.image.photo.gifmaker.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="5">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_maker_gif" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <com.gif.image.photo.gifmaker.utils.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|bottom"
                    android:text="@string/gif_maker"
                    android:textColor="#fff"
                    android:textSize="30sp" />

                <com.gif.image.photo.gifmaker.utils.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:gravity="center_horizontal|top"
                    android:text="@string/make_gif_from_images"
                    android:textColor="#ead8f2"
                    android:textSize="22sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btn_new_gif"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_create"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/selector_creat_gif" />

                <com.gif.image.photo.gifmaker.utils.CustomTextView
                    android:id="@+id/customTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/create_gif"
                    android:textColor="#fff"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_my_gif"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_my"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/selector_my_gif" />

                <com.gif.image.photo.gifmaker.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/my_gif"
                    android:textColor="#fff"
                    android:textSize="22sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_ads"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:visibility="gone"></RelativeLayout>

</FrameLayout>