<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5e4e5"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.gif.image.photo.gifmaker.activities.MyGifActivity">

    <include layout="@layout/action_bar" />

    <RelativeLayout
        android:id="@+id/rl_select"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:visibility="gone">

        <com.gif.image.photo.gifmaker.utils.CustomTextViewSanFranciscoMedium
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <com.gif.image.photo.gifmaker.utils.CustomTextViewSanFranciscoMedium
            android:id="@+id/tv_select_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btn_select_all"
            android:layout_toRightOf="@+id/btn_cancel"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/select_an_item"
            android:textSize="13sp" />

        <com.gif.image.photo.gifmaker.utils.CustomTextViewSanFranciscoMedium
            android:id="@+id/btn_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_button_select_all"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/select_all"
            android:textColor="@android:color/white"
            android:textSize="13sp" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_gif"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"></android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/rl_action"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/btn_share"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@drawable/ic_share" />

        <ImageView
            android:id="@+id/btn_delete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@+id/btn_share"
            android:padding="10dp"
            android:src="@drawable/ic_delete1" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_ads"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:visibility="gone"></RelativeLayout>
</LinearLayout>
